force-app/main/default/objects/SBQQ__FieldSetMetadata__c/fields/SBQQ__FieldSet__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FieldSet__c</fullName>
        <description>The FieldSet being used for column metadata sizing.</description>
        <label>FieldSet Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>