force-app/main/default/objects/SBQQ__FieldSetMetadata__c/fields/SBQQ__FieldSetValidation__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FieldSetValidation__c</fullName>
        <label>FieldSet Validation</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>