force-app/main/default/objects/SBQQ__FieldSetMetadata__c/fields/SBQQ__ObjectType__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ObjectType__c</fullName>
        <description>The Object Type being referred to when using column metadata sizing.</description>
        <label>Object Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Line</fullName>
                    <default>true</default>
                    <label>Quote Line</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>